--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -140,27 +140,49 @@ input {
   height: 40px;
   border-radius: 15px; }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 20px;
-  overflow: hidden;
-  color: #f2eae3;
-  font-family: 'Abril Fatface', cursive;
-  font-size: 18px; }
-
-li {
-  float: left; }
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 20px 45px;
-  text-decoration: none; }
-
-li a:hover:not(.active) {
-  background-color: #d98c82; }
+  nav ul li {
+    display: inline-block;
+  }
+  nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+  }
+  nav ul li a,
+  nav ul li a:after,
+  nav ul li a:before {
+    transition: all .5s;
+  }
+  nav ul li a:hover {
+    color: #555;
+  }
+  
+  
+  /* stroke */
+  nav.stroke ul li a,
+  nav.fill ul li a {
+    position: relative;
+  }
+  nav.stroke ul li a:after,
+  nav.fill ul li a:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: #aaa;
+    height: 1px;
+  }
+  nav.stroke ul li a:hover:after {
+  width: 100%;
+}
 
 .parallax {
   /* The image used */
@@ -198,4 +220,5 @@ li a:hover:not(.active) {
   color: #d49d96;
   font-size: 18px; }
 
+  
 /*# sourceMappingURL=style.css.map */
