--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -6,10 +6,10 @@
   align-items: stretch; }
 
 .wrapper > div {
-  background: #333539; }
+  background: #141312; }
 
 .wrapper > div:nth-child(odd) {
-  background: #333539; }
+  background: #141312; }
 
 .box1 {
   grid-column: 1/3;
@@ -29,36 +29,36 @@
   grid-template-columns: 50% 50%; }
 
 .gridcol > div {
-  background: #333539;
+  background: #141312;
   padding: 1em; }
 
 .gridcol > div:nth-child(odd) {
-  background: #333539; }
+  background: #141312; }
 
 .gridcols {
   display: grid;
   grid-template-columns: 27% 27% 28%; }
 
 .gridcols > div {
-  background: #333539;
+  background: #141312;
   padding: 25px;
   width: 350px;
   padding-left: 35%; }
 
 .gridcols > div:nth-child(odd) {
-  background: #333539; }
+  background: #141312; }
 
 .gridcolss {
   display: grid;
   grid-template-columns: 27% 27% 28%; }
 
 .gridcolss > div {
-  background: #333539;
+  background: #141312;
   padding: 25px;
   width: 350px; }
 
 .gridcolss > div:nth-child(odd) {
-  background: #333539; }
+  background: #141312; }
 
 @keyframes slidy {
   0% {
@@ -145,12 +145,14 @@ input {
   }
   nav ul li a {
     display: block;
-    padding: 15px;
+    padding: 20px;
     text-decoration: none;
-    color: #aaa;
-    font-weight: 800;
+    color: #c3b396;
+    font-weight: 0;
     text-transform: uppercase;
     margin: 0 10px;
+    font-family: Jasper Daniels;
+    font-size: 30px;
   }
   nav ul li a,
   nav ul li a:after,
