--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -151,9 +151,17 @@ input {
     font-weight: 0;
     text-transform: uppercase;
     margin: 0 10px;
-    font-family: Jasper Daniels;
+    font-family: 'jasper_danielsregular';
     font-size: 30px;
   }
+  @font-face {
+    font-family: 'jasper_danielsregular';
+    src: url('jasper_daniels-webfont.woff2') format('woff2'),
+         url('jasper_daniels-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
   nav ul li a,
   nav ul li a:after,
   nav ul li a:before {
