--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -12,7 +12,7 @@
   background: #141312; }
 
 .box1 {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 1/4; }
 
 .box2 {
@@ -22,7 +22,7 @@
   grid-row: 3/5; }
 
 .box5 {
-  grid-column: 1/3; }
+  grid-column: 1/4; }
 
 .gridcol {
   display: grid;
@@ -146,13 +146,14 @@ input {
   nav ul li a {
     display: block;
     padding: 20px;
+    left: 500px;
     text-decoration: none;
     color: #c3b396;
     font-weight: 0;
     text-transform: uppercase;
-    margin: 0 10px;
+      text-align: center;
     font-family: 'jasper_danielsregular';
-    font-size: 30px;
+    font-size: 20px;
   }
   @font-face {
     font-family: 'jasper_danielsregular';
@@ -191,7 +192,7 @@ input {
     height: 1px;
   }
   nav.stroke ul li a:hover:after {
-  width: 100%;
+ 
 }
 
 .parallax {
@@ -229,6 +230,12 @@ input {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: #d49d96;
   font-size: 18px; }
-
-  
+.logo {
+    display: inline-block;
+    vertical-align: top;
+    width: 50px;
+    height: 50px;
+   
+      /* if you want it vertically middle of the navbar. */
+}
 /*# sourceMappingURL=style.css.map */
