--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -11,18 +11,11 @@
 .wrapper > div:nth-child(odd) {
   background: #141312; }
 
-.box1 {
-  grid-column: 1/3;
-  grid-row: 1/4; }
 
-.box2 {
-  grid-row: 1/3; }
-
-.box3 {
-  grid-row: 3/5; }
 
 .box5 {
-  grid-column: 1/3; }
+  grid-column: 1/4; 
+}
 
 .gridcol {
   display: grid;
@@ -139,20 +132,37 @@ input {
   width: 50%;
   height: 40px;
   border-radius: 15px; }
+/* bagong nav */
+
+.nav {
+  height: 40px;
+  width: 100%;
+  background-color: #141312;
+    
+}
+ 
+.nav > .nav-header {
+  display: inline;
+}
+
+/* tapos nav */
 
   nav ul li {
     display: inline-block;
   }
-  nav ul li a {
+  nav li a {
     display: block;
-    padding: 20px;
+    padding: 10px;
+    left: 380px;
+    bottom: 30px;
     text-decoration: none;
     color: #c3b396;
     font-weight: 0;
     text-transform: uppercase;
     margin: 0 10px;
     font-family: 'jasper_danielsregular';
-    font-size: 30px;
+    font-size: 24px;
+    
   }
   @font-face {
     font-family: 'jasper_danielsregular';
