--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -11,18 +11,11 @@
 .wrapper > div:nth-child(odd) {
   background: #141312; }
 
-.box1 {
-  grid-column: 1/4;
-  grid-row: 1/4; }
 
-.box2 {
-  grid-row: 1/3; }
-
-.box3 {
-  grid-row: 3/5; }
 
 .box5 {
-  grid-column: 1/4; }
+  grid-column: 1/4; 
+}
 
 .gridcol {
   display: grid;
@@ -139,21 +132,37 @@ input {
   width: 50%;
   height: 40px;
   border-radius: 15px; }
+/* bagong nav */
+
+.nav {
+  height: 40px;
+  width: 100%;
+  background-color: #141312;
+    
+}
+ 
+.nav > .nav-header {
+  display: inline;
+}
+
+/* tapos nav */
 
   nav ul li {
     display: inline-block;
   }
-  nav ul li a {
+  nav li a {
     display: block;
-    padding: 20px;
-    left: 500px;
+    padding: 10px;
+    left: 380px;
+    bottom: 30px;
     text-decoration: none;
     color: #c3b396;
     font-weight: 0;
     text-transform: uppercase;
-      text-align: center;
+    margin: 0 10px;
     font-family: 'jasper_danielsregular';
-    font-size: 20px;
+    font-size: 24px;
+    
   }
   @font-face {
     font-family: 'jasper_danielsregular';
@@ -192,7 +201,7 @@ input {
     height: 1px;
   }
   nav.stroke ul li a:hover:after {
- 
+  width: 100%;
 }
 
 .parallax {
@@ -230,12 +239,6 @@ input {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: #d49d96;
   font-size: 18px; }
-.logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 50px;
-    height: 50px;
-   
-      /* if you want it vertically middle of the navbar. */
-}
+
+  
 /*# sourceMappingURL=style.css.map */
