modify welcome.blade.php and style.css

--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -1,7 +1,200 @@
+/* login form */
+.signup { 
+ border-radius: 9px;
+ font-family: 'Source Sans Pro', sans-serif;
+ font-size: 18px;
+ width: 180px;
+ height: 35px;
+ border-color: #c2b396;\
+ padding: 10px;
+}
+
+
+/*hover*/ 
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(https://fonts.googleapis.com/css?family=Teko:700);
+.snip1543 {
+  background-color: #fff;
+  color: #ffffff;
+  display: inline-block;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 16px;
+  margin: 10px 5px;
+  max-width: 315px;
+  min-width: 230px;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.snip1543 *,
+.snip1543 *:before,
+.snip1543 *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.45s ease;
+  transition: all 0.45s ease;
+}
+
+.snip1543 img {
+  backface-visibility: hidden;
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.snip1543:before,
+.snip1543:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: '';
+  background-color: #b81212;
+  opacity: 0.5;
+  -webkit-transition: all 0.45s ease;
+  transition: all 0.45s ease;
+}
+
+.snip1543:before {
+  -webkit-transform: skew(30deg) translateX(-80%);
+  transform: skew(30deg) translateX(-80%);
+}
+
+.snip1543:after {
+  -webkit-transform: skew(-30deg) translateX(-70%);
+  transform: skew(-30deg) translateX(-70%);
+}
+
+.snip1543 figcaption {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 1;
+  bottom: 0;
+  padding: 25px 40% 25px 20px;
+}
+
+.snip1543 figcaption:before,
+.snip1543 figcaption:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #b81212;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  content: '';
+  opacity: 0.5;
+  z-index: -1;
+}
+
+.snip1543 figcaption:before {
+  -webkit-transform: skew(30deg) translateX(-100%);
+  transform: skew(30deg) translateX(-100%);
+}
+
+.snip1543 figcaption:after {
+  -webkit-transform: skew(-30deg) translateX(-90%);
+  transform: skew(-30deg) translateX(-90%);
+}
+
+.snip1543 h3,
+.snip1543 p {
+  margin: 0;
+  opacity: 0;
+  letter-spacing: 1px;
+}
+
+.snip1543 h3 {
+  font-family: 'Teko', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
+.snip1543 p {
+  font-size: 0.9em;
+}
+
+.snip1543 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.snip1543:hover h3,
+.snip1543.hover h3,
+.snip1543:hover p,
+.snip1543.hover p {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 0.9;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+
+.snip1543:hover:before,
+.snip1543.hover:before {
+  -webkit-transform: skew(30deg) translateX(-20%);
+  transform: skew(30deg) translateX(-20%);
+  -webkit-transition-delay: 0.05s;
+  transition-delay: 0.05s;
+}
+
+.snip1543:hover:after,
+.snip1543.hover:after {
+  -webkit-transform: skew(-30deg) translateX(-10%);
+  transform: skew(-30deg) translateX(-10%);
+}
+
+.snip1543:hover figcaption:before,
+.snip1543.hover figcaption:before {
+  -webkit-transform: skew(30deg) translateX(-40%);
+  transform: skew(30deg) translateX(-40%);
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+}
+
+.snip1543:hover figcaption:after,
+.snip1543.hover figcaption:after {
+  -webkit-transform: skew(-30deg) translateX(-30%);
+  transform: skew(-30deg) translateX(-30%);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+
+
+/*hero section */ 
+
+.wrappery {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-auto-rows: minmax(380px, auto);
+  align-items: stretch;
+  align-items: stretch; }
+
+.wrappery > div {
+  background: #141312; }
+
+.wrappery > div:nth-child(odd) {
+  background: #141312; }
+
+
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: 33.3% 33.3% 33.3%;
+  grid-auto-rows: minmax(10px, auto);
   align-items: stretch;
   align-items: stretch; }
 
@@ -12,177 +205,75 @@
   background: #141312; }
 
 
-
-.box5 {
-  grid-column: 1/4; 
+* {
+  margin:0px;
+  padding:0px;
+  box-sizing:border-box;
+}
+body {
+  overflow:scroll;
+}
+#sidebar {
+  position:absolute;
+  top:0px;
+  right:0px;
+  width:200px;
+  height:100vh;
+  background:#141311;
+  text-align:center;
+  transform-origin:right;
+  transform:perspective(1200px) rotateY(90deg);
+  transition:all 400ms ease;
+}
+#sidebar ul li {
+  color:#ccc;
+  font-size:20px;
+  width:100%;
+  height:50px;
+  border-bottom:1px solid #a2321a;
+  line-height:50px;
+}
+#sidebar.active {
+  transform:perspective(1200px) rotateY(0deg);
 }
 
-.gridcol {
-  display: grid;
-  grid-template-columns: 50% 50%; }
 
-.gridcol > div {
-  background: #141312;
-  padding: 1em; }
 
-.gridcol > div:nth-child(odd) {
-  background: #141312; }
-
-.gridcols {
-  display: grid;
-  grid-template-columns: 27% 27% 28%; }
-
-.gridcols > div {
-  background: #141312;
-  padding: 25px;
-  width: 350px;
-  padding-left: 35%; }
-
-.gridcols > div:nth-child(odd) {
-  background: #141312; }
-
-.gridcolss {
-  display: grid;
-  grid-template-columns: 27% 27% 28%; }
-
-.gridcolss > div {
-  background: #141312;
-  padding: 25px;
-  width: 350px; }
-
-.gridcolss > div:nth-child(odd) {
-  background: #141312; }
-
-@keyframes slidy {
-  0% {
-    left: 0%; }
-  20% {
-    left: 0%; }
-  25% {
-    left: -100%; }
-  45% {
-    left: -100%; }
-  50% {
-    left: -200%; }
-  70% {
-    left: -200%; }
-  75% {
-    left: -300%; }
-  95% {
-    left: -300%; }
-  100% {
-    left: -400%; } }
-div#slider {
-  overflow: hidden; }
-
-div#slider figure img {
-  width: 20%;
-  float: left; }
-
-div#slider figure {
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: left;
-  font-size: 0;
-  animation: 30s slidy infinite; }
-
-.button {
-  border-radius: 14px;
-  background-color: #d98c82;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 16px;
-  padding: 3px;
-  height: 30px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px; }
-
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s; }
-
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s; }
-
-.button:hover span {
-  padding-right: 25px; }
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0; }
-
-h2 {
-  color: #f2eae3;
-  font-family: 'Abril Fatface', cursive;
-  font-size: 18px; }
-
-input {
-  width: 50%;
-  height: 40px;
-  border-radius: 15px; }
-/* bagong nav */
-
-.nav {
-  height: 40px;
-  width: 100%;
-  background-color: #141312;
-    
+#toggle-btn {
+  position:absolute;
+  right:15px;
+  top:9px;
+  transition:right 200ms linear 0ms,transform 300ms ease 100ms;
 }
- 
-.nav > .nav-header {
-  display: inline;
+#toggle-btn.active {
+  right:230px;
+  transform:rotate(360deg);
+}
+#toggle-btn span {
+  position:relative;
+  top:0px;
+  display:block;
+  background:#c2b396;
+  width:30px;
+  height:5px;
+  margin:5px 0px;
+  cursor:pointer;
+  transition:transform 300ms ease 200ms;
+}
+#toggle-btn.active span:nth-child(1) {
+  top:10px;
+  transform:rotate(45deg);
+}
+#toggle-btn.active span:nth-child(2) {
+  opacity:0;
+}
+#toggle-btn.active span:nth-child(3) {
+  top:-10px;
+  transform:rotate(-45deg);
 }
 
-/* tapos nav */
 
-  nav ul li {
-    display: inline-block;
-  }
-  nav li a {
-    display: block;
-    padding: 10px;
-    left: 380px;
-    bottom: 30px;
-    text-decoration: none;
-    color: #c3b396;
-    font-weight: 0;
-    text-transform: uppercase;
-    margin: 0 10px;
-    font-family: 'jasper_danielsregular';
-    font-size: 24px;
-    
-  }
-  @font-face {
-    font-family: 'jasper_danielsregular';
-    src: url('jasper_daniels-webfont.woff2') format('woff2'),
-         url('jasper_daniels-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-  nav ul li a,
-  nav ul li a:after,
-  nav ul li a:before {
-    transition: all .5s;
-  }
-  nav ul li a:hover {
-    color: #555;
-  }
-  
-  
-  /* stroke */
+/* stroke */
   nav.stroke ul li a,
   nav.fill ul li a {
     position: relative;
@@ -204,41 +295,297 @@ input {
   width: 100%;
 }
 
+/* nav */
+
+.nav {
+  height: 50px;
+  width: 100%;
+  background-color: #141312;
+    
+}
+ 
+.nav > .nav-header {
+  display: inline;
+}
+
+/* tapos nav */
+
+  nav ul li {
+    display: inline-block;
+  }
+  nav li a {
+    display: block;
+    padding: 7px;
+    left: 340px;
+    bottom: 19px;
+    text-decoration: none;
+    color: #c3b396;
+    font-weight: 0;
+    text-transform: uppercase;
+    margin: 0 10px;
+    font-family: 'Coda', cursive;
+    font-size: 18px;
+    
+}
+  nav ul li a,
+  nav ul li a:after,
+  nav ul li a:before {
+    transition: all .5s;
+  }
+  nav ul li a:hover {
+    color: #555;
+  }
+
+/* CSS GRID */
+
+.gridcol {
+  display: grid;
+  grid-template-columns: 50% 50%; }
+
+.gridcol > div {
+  background: #141311;
+  padding: 1em; }
+
+.gridcol > div:nth-child(odd) {
+  background: #141311; }
+
+gridcols {
+  display: grid;
+  grid-template-columns: 27% 27% 28%; }
+
+.gridcols > div {
+  background: #141312;
+  padding: 25px;
+  width: 350px;
+  padding-left: 35%; }
+
+.gridcols > div:nth-child(odd) {
+  background: #141312; }
+
+.gridcols {
+  display: grid;
+  grid-template-columns: 27% 27% 28%; }
+
+.gridcols > div {
+  background: #333539;
+  padding: 2px;
+  width: 350px;
+  padding-left: 35%; }
+
+.gridcols > div:nth-child(odd) {
+  background: #333539; }
+
+
+
+/* button */
+
+.button {
+display: block;
+width: 160px;
+height: 50px;
+position: relative;
+border: 3px solid #c2b396;
+border-radius: 5px;
+margin: 20px auto;
+background-color: #a2321a;
+}
+.button .content {
+display: block;
+position: absolute;
+bottom: 6px;
+width: 100%;
+height: 100%;
+line-height: 60px;
+text-align: center;
+background-color: #c2b396;
+color: #a2321a;
+text-transform: uppercase;
+box-shadow: 0 6px 0 #beac8a;
+border-radius: 5px;
+transition: all 0.1s linear;
+}
+            
+.button:active .content {
+ bottom: 0;
+box-shadow: 0 0 0 #06c;
+ }
+
+/*try */
+#slider,
+.wrap,
+.slide-content {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 90vh;
+  overflow-x: hidden;
+}
+
+.wrap {
+  position: relative;
+}
+
+.slide {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.slide1 {
+  background-image: url("../images/Image/back3.jpg");
+}
+.slide2 {
+  background-image: url("../images/Image/back1.jpg");
+}
+.slide3 {
+  background-image: url("../images/Image/back4.jpg");
+}
+
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.slide-content span {
+  font-size: 5rem;
+  color: #fff;
+}
+
+.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -35px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+#arrow-left {
+  border-width: 30px 40px 30px 0;
+  border-color: transparent #fff transparent transparent;
+  left: 0;
+  margin-left: 30px;
+}
+
+#arrow-right {
+  border-width: 30px 0 30px 40px;
+  border-color: transparent transparent transparent #fff;
+  right: 0;
+  margin-right: 30px;
+}
+/*parallax*/
 .parallax {
   /* The image used */
-  background-image: url("../images/Public/Picture/photo.jpg");
+  background-image: url("../images/Image/back4.jpg");
   width: 100%;
   /* Set a specific height */
-  min-height: 250px;
+  min-height: 200px;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; }
 
-.parallax2 {
-  /* The image used */
-  background-image: url("../images/Public/Picture/photo.jpg");
-  width: 100%;
-  /* Set a specific height */
-  min-height: 30px;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+/* faded */
 
-.para2 {
-  color: #ceb19b;
-  text-align: center;
-  font-family: 'Abril Fatface', cursive;
-  font-size: 180px;
-  padding-top: 10px; }
+@-webkit-keyframes logomorph {
+0% {
+  opacity:1;
+}
+25% {
+  opacity:1;
+}
+75% {
+  opacity:0;
+}
+100% {
+  opacity:0;
+}
+}
 
-.lalagyan {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  color: #d49d96;
-  font-size: 18px; }
+@-moz-keyframes logomorph {
+0% {
+  opacity:1;
+}
+25% {
+  opacity:1;
+}
+75% {
+  opacity:0;
+}
+100% {
+  opacity:0;
+}
+}
 
-  
-/*# sourceMappingURL=style.css.map */
+@-o-keyframes logomorph {
+0% {
+  opacity:1;
+}
+25% {
+  opacity:1;
+}
+75% {
+  opacity:0;
+}
+100% {
+  opacity:0;
+}
+}
+
+@keyframes logomorph {
+0% {
+  opacity:1;
+}
+25% {
+  opacity:1;
+}
+75% {
+  opacity:0;
+}
+100% {
+  opacity:0;
+}
+}
+
+#mainlogo {
+  position:relative;
+  height:281px;
+  width:450px;
+  margin:0 auto;
+}
+#mainlogo img {
+  position:absolute;
+  left:140px;
+}
+
+#mainlogo img.logotop {
+  -webkit-animation-name: logomorph;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 5s;
+  -webkit-animation-direction: alternate;
+
+  -moz-animation-name: logomorph;
+  -moz-animation-timing-function: ease-in-out;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-duration: 5s;
+  -moz-animation-direction: alternate;
+
+  -o-animation-name: logomorph;
+  -o-animation-timing-function: ease-in-out;
+  -o-animation-iteration-count: infinite;
+  -o-animation-duration: 5s;
+  -o-animation-direction: alternate;
+
+  animation-name: logomorph;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
+  animation-direction: alternate;
+}
