--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -323,9 +323,17 @@ body {
     font-weight: 0;
     text-transform: uppercase;
     margin: 0 10px;
-    font-family: 'Coda', cursive;
-    font-size: 18px;
+    font-family: 'jasper_danielsregular';
+    font-size: 27px;
     
+  }
+  @font-face {
+    font-family: 'jasper_danielsregular';
+    src: url('jasper_daniels-webfont.woff2') format('woff2'),
+         url('jasper_daniels-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
   nav ul li a,
   nav ul li a:after,
