--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -874,12 +874,12 @@ div#slider figure {
 
 .animate {
     font-size: 50px;
-    
+
 
 }
 
 .animate span {
-display: inline-block;
+    display: inline-block;
 }
 
 
@@ -968,11 +968,11 @@ display: inline-block;
 .six span {
     color: rgba(234, 40, 3, 0.8);
     opacity: 0;
-     font-family: 'Cinzel Decorative', cursive;
-    font-size: 32px;
+    font-family: 'Cinzel Decorative', cursive;
+    font-size: 26px;
     transform: rotate(-180deg) translate(150px, 0);
     animation: twister .5s forwards;
-    
+
 }
 
 
@@ -985,4 +985,46 @@ display: inline-block;
         transform: rotate(0deg) translate(0);
         opacity: 1;
     }
+}
+
+/*registration form*/
+.registerform {
+    display: grid;
+    grid-template-columns: 50% 5% 2fr 7%;
+    grid-auto-rows: 90px 410px;
+    align-items: stretch;
+    align-items: stretch;
+}
+
+.registerform > div {
+    background: transparent;
+}
+
+.registerform > .box3:nth-child(odd) {
+    background: transparent;
+}
+
+.box1 {
+    grid-column: 1/3;
+    grid-row: 1/5;
+}
+
+.box2 {
+    grid-row: 3/5;
+}
+.box3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+.containerko {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.centered {
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
