--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -507,12 +507,12 @@ nav ul li a:hover {
 }
 
 .gridcol > div {
-    background: #141311;
+    background: transparent;
     padding: 1em;
 }
 
 .gridcol > div:nth-child(odd) {
-    background: #141311;
+    background: transparent;
 }
 
 
@@ -1012,6 +1012,7 @@ div#slider figure {
 .box2 {
     grid-row: 3/5;
 }
+
 .box3 {
     grid-column: 3/4;
     grid-row: 2/3;
@@ -1022,9 +1023,152 @@ div#slider figure {
     text-align: center;
     color: white;
 }
+
 .centered {
     position: absolute;
     top: 47%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+
+/*band profile*/
+.album {
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    align-items: stretch;
+    align-items: stretch;
+}
+
+.album > div {
+    background: #d5d5d5;
+}
+
+.bandmem > .box3:nth-child(odd) {
+    background: #d5d5d6;
+}
+
+
+.bandmem {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    align-items: stretch;
+    align-items: stretch;
+}
+
+.bandmem > div {
+    background: #d5d5d5;
+}
+
+.bandmem > .box3:nth-child(odd) {
+    background: #d5d5d6;
+}
+
+
+.bandprofile {
+    display: grid;
+    grid-template-columns: 5% 45% 5% 40% 5%;
+    grid-auto-rows: 50px 80% 50px;
+    align-items: stretch;
+    align-items: stretch;
+}
+
+.bandprofile > div {
+    background: #d5d5d5;
+}
+
+.bandprofile > .box3:nth-child(odd) {
+    background: #d5d5d6;
+}
+
+.box1 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.box2 {
+    grid-column: 4/5;
+    grid-row: 2/3;
+}
+
+
+.img-valign {
+    vertical-align: middle;
+    margin-bottom: 0.5em;
+}
+
+.text2 {
+    font-size: 26px;
+    font-family: 'Cinzel Decorative', cursive;
+}
+
+.text3 {
+    font-size: 16px;
+    font-family: 'Lato', sans-serif;
+    margin-top: -43px;
+    margin-left: 153px;
+}
+
+.desc {
+    margin-left: 70px;
+    margin-right: 70px;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    padding: 10px;
+    border: 3px;
+    border-style: double;
+    border-color: #a2321a;
+    color: #141312;
+    padding: 1em;
+    text-align: center;
+}
+
+.containerreg {
+    position: relative;
+    width: 100%;
+    padding: 10px;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: #c2b396;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+    
+}
+
+.containerreg:hover .overlay {
+    bottom: 0;
+    height: 100%;
+}
+
+.text {
+    color: white;
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+hr {
+    display: block;
+    border: 0;
+    border-top: solid #c2b396;
+    padding: 0;
 }
