--- a/bootleg-radio/public/css/style.css
+++ b/bootleg-radio/public/css/style.css
@@ -1140,7 +1140,7 @@ div#slider figure {
     bottom: 100%;
     left: 0;
     right: 0;
-    background-color: #c2b396;
+    background-color: transparent;
     overflow: hidden;
     width: 100%;
     height: 0;
@@ -1155,7 +1155,7 @@ div#slider figure {
 
 .text {
     color: white;
-    font-size: 14px;
+    font-size: 17px;
     font-family: 'Lato', sans-serif;
     position: absolute;
     top: 50%;
