--- a/public/css/app.css
+++ b/public/css/app.css
@@ -39,7 +39,7 @@
 }
 
 html {
-    font-family: sans-serif;
+    font-family: 'Cinzel Decorative', cursive;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -58,7 +58,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
     margin: 0;
-    font-family: Nunito, sans-serif;
+    font-family: 'Cinzel Decorative', cursive;
     font-size: .9rem;
     font-weight: 400;
     line-height: 1.6;
@@ -175,7 +175,7 @@ a:not([href]):not([tabindex]):focus {
 }
 
 code, kbd, pre, samp {
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
+    font-family: 'Cinzel Decorative', cursive;
     font-size: 1em
 }
 
@@ -234,7 +234,7 @@ button:focus {
 
 button, input, optgroup, select, textarea {
     margin: 0;
-    font-family: inherit;
+    font-family: 'Cinzel Decorative', cursive;
     font-size: inherit;
     line-height: inherit
 }
@@ -331,7 +331,7 @@ template {
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     margin-bottom: .5rem;
-    font-family: inherit;
+    font-family: 'Cinzel Decorative', cursive;
     font-weight: 500;
     line-height: 1.2;
     color: inherit
@@ -4095,7 +4095,6 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 
 .navbar-brand {
     display: inline-block;
-    padding-top: .32rem;
     padding-bottom: .32rem;
     margin-right: 1rem;
     font-size: 1.125rem;
@@ -5695,7 +5694,7 @@ button.close {
     z-index: 1070;
     display: block;
     margin: 0;
-    font-family: Nunito, sans-serif;
+    font-family: 'Cinzel Decorative', cursive;
     font-style: normal;
     font-weight: 400;
     line-height: 1.6;
@@ -5806,7 +5805,7 @@ button.close {
     left: 0;
     z-index: 1060;
     max-width: 276px;
-    font-family: Nunito, sans-serif;
+    font-family: 'Cinzel Decorative', cursive;
     font-style: normal;
     font-weight: 400;
     line-height: 1.6;
@@ -9173,7 +9172,7 @@ a.bg-dark:focus, a.bg-dark:hover, button.bg-dark:focus, button.bg-dark:hover {
 }
 
 .text-monospace {
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 .text-justify {
