Create Band Edited

--- a/public/css/bandscreate.css
+++ b/public/css/bandscreate.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;"
 }
 
  .userprofile {
@@ -63,7 +63,7 @@
 .form-wizard strong { font-weight: 500; }
 
 .form-wizard a, .form-wizard a:hover, .form-wizard a:focus {
-	color: #ea2803;
+	color: #a2321a;
 	text-decoration: none;
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
@@ -79,7 +79,7 @@
 .form-wizard h3 {
 	font-size: 25px;
     font-weight: 300;
-    color: #ea2803;
+    color: #a2321a;
     line-height: 30px;
 	margin-top: 0; 
 	margin-bottom: 5px; 
@@ -90,7 +90,7 @@
 	float:left;
 	font-size: 20px;
     font-weight: 300;
-    color: #ea2803;
+    color: #a2321a;
     line-height: 26px;
 	width:100%;
 }
@@ -106,8 +106,8 @@
 
 .form-wizard img { max-width: 100%; }
 
-.form-wizard ::-moz-selection { background: #ea2803; color: #fff; text-shadow: none; }
-.form-wizard ::selection { background: #ea2803; color: #fff; text-shadow: none; }
+.form-wizard ::-moz-selection { background: #a2321a; color: #fff; text-shadow: none; }
+.form-wizard ::selection { background: #a2321a; color: #fff; text-shadow: none; }
 
 
 .form-control {
@@ -133,7 +133,7 @@
 }
 
 .form-control option:hover, .form-control option:checked  {
-    box-shadow: 0 0 10px 100px #ea2803 inset;
+    box-shadow: 0 0 10px 100px #a2321a inset;
 }
 
 .form-control:focus {
@@ -148,7 +148,7 @@
 .form-control::-webkit-input-placeholder { color: #888; }
 
 .form-wizard label { font-weight: 300; }
-.form-wizard label span { color:#ea2803; }
+.form-wizard label span { color:#a2321a; }
 
 
 .form-wizard .btn {
@@ -192,14 +192,14 @@
 .form-wizard .btn.btn-next:focus,
 .form-wizard .btn.btn-next:active:focus, 
 .form-wizard .btn.btn-next.active:focus { 
-background: #ea2803; 
+background: #a2321a; 
 }
 
 .form-wizard .btn.btn-submit,
 .form-wizard .btn.btn-submit:focus,
 .form-wizard .btn.btn-submit:active:focus, 
 .form-wizard .btn.btn-submit.active:focus { 
-background: #ea2803; 
+background: #a2321a; 
 }
 
 .form-wizard .btn.btn-previous,
@@ -224,7 +224,7 @@ background: #bbb;
 	margin: 25px auto;
 }
 .form-wizard .progress-bar {
-	background-color: #ea2803;
+	background-color: #a2321a;
 }
 
 .form-wizard-steps{ 
@@ -242,10 +242,10 @@ background: #bbb;
     transform: skewX(-30deg); /* Standard syntax */
 }
 .form-wizard-step.active{
-	background:#ea2803;
+	background:#a2321a;
 }
 .form-wizard-step.activated{
-	background:#ea2803;
+	background:#a2321a;
 }
 .form-wizard-progress { 
 	position: absolute; 
@@ -253,14 +253,14 @@ background: #bbb;
 	left: 0; 
 	width: 100%; 
 	height: 0px; 
-	background: #ea2803;
+	background: #a2321a;
 }
 .form-wizard-progress-line { 
 	position: absolute; 
 	top: 0; 
 	left: 0; 
 	height: 0px; 
-	background: #ea2803; 
+	background: #a2321a; 
 }
 
 .form-wizard-tolal-steps-3 .form-wizard-step { 
@@ -299,7 +299,7 @@ background: #bbb;
     transform: skewX(30deg); /* Standard syntax */
 }
 .form-wizard-step.activated .form-wizard-step-icon {
-	background: #ea2803; 
+	background: #a2321a; 
 	border: 1px solid #fff; 
 	color: #fff; 
 	line-height: 38px;
@@ -307,7 +307,7 @@ background: #bbb;
 .form-wizard-step.active .form-wizard-step-icon {
 	background: #fff; 
 	border: 1px solid #fff; 
-	color: #ea2803; 
+	color: #a2321a; 
 	line-height: 38px;
 }
 
@@ -328,7 +328,7 @@ background: #bbb;
 
 .form-wizard-buttons { text-align: right; }
 
-.form-wizard .input-error { border-color: #ea2803;}
+.form-wizard .input-error { border-color: #a2321a;}
 
 /** image uploader **/
 .image-upload a[data-action] {
@@ -343,7 +343,7 @@ background: #bbb;
   text-align: center;
 }
 .image-upload a[data-action]:hover {
-  color: #ea2803;
+  color: #a2321a;
 }
 .image-upload a[data-action].disabled {
   opacity: 0.35;
@@ -560,7 +560,7 @@ animation-delay: .35s;
   transition: all 0.2s ease;
 }
 .file-upload:hover {
-  background: #f34727;
+  background: #a2321a;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
   box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
