--- a/public/css/bandscreate.css
+++ b/public/css/bandscreate.css
@@ -551,7 +551,7 @@ animation-delay: .35s;
   color: #141312;
   font-size: 1.2em;
   background: transparent;
-  border: 2px solid #141312;
+  border: 2px solid #a2321a;
   padding: .85em 1em;
   display: inline;
     text-align: center;
